@@ -10124,6 +10124,36 @@ part parent "m128rfa1"
   ;
 
 #------------------------------------------------------------
+# ATmega2564RFR2
+#------------------------------------------------------------
+
+part parent "m256rfr2"
+    id               = "m2564rfr2";
+    desc             = "ATmega2564RFR2";
+    signature        = 0x1e 0xa8 0x03;
+  ;
+
+#------------------------------------------------------------
+# ATmega1284RFR2
+#------------------------------------------------------------
+
+part parent "m128rfr2"
+    id               = "m1284rfr2";
+    desc             = "ATmega1284RFR2";
+    signature        = 0x1e 0xa7 0x03;
+  ;
+
+#------------------------------------------------------------
+# ATmega644RFR2
+#------------------------------------------------------------
+
+part parent "m64rfr2"
+    id               = "m644rfr2";
+    desc             = "ATmega644RFR2";
+    signature        = 0x1e 0xa6 0x03;
+  ;
+
+#------------------------------------------------------------
 # ATtiny24
 #------------------------------------------------------------
 
